--- a/views/bicycles/Lr01.html
+++ b/views/bicycles/Lr01.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../../css/style.css" />
 
   <meta charset="UTF-8">
-  <title>Iveco Trakker</title>
+  <title>Peugeot Lr01</title>
 </head>
 <!--
 <body>
@@ -36,13 +36,13 @@
 
 <!-- Zone de réservation -->
 <section id="reservation" class="d-flex justify-content-evenly">
-  <img src="../../images/vehicles/cars/Senna.png" alt="SMclaren senna" id="photo-belle-voiture">
+  <img src="../../images/vehicles/bicycles/Lr01.png" alt="Peugeot Lr01" id="photo-belle-voiture">
 
   <article id="reservation-left" class="card">
     <form action="" id="description-vehicule">
       <br />
 
-      <h3 id="titre-vehicule" class="d-flex justify-content-center"><strong> Mclaren senna</strong></h3>
+      <h3 id="titre-vehicule" class="d-flex justify-content-center"><strong> Peugeot Lr01</strong></h3>
       <div>
         <div class="d-flex justify-content-center">
           Une voiture idéale pour vos trajets quotidiens
@@ -99,11 +99,11 @@
 
 
             <div class="slider-content">
-              <a href="../../views/cars/Impreza wrx sti.html" title="Subaru Impreza wrx sti"><img
-                  src="../../images/vehicles/cars/Impreza wrx sti.png"></a>
-              <a href="../../views/cars/500.html" title="Fiat 500"><img src="../../images/vehicles/cars/500.png"></a>
-              <a href="../../views/cars/classe c cabriolet.html" title="Mercedes classe c cabriolet"><img
-                  src="../../images/vehicles/cars/Classe c cabriolet.png"></a>
+              <a href="../../views/bicycles/Anyway e200.html" title="Anyway e200"><img
+                  src="../../images/vehicles/bicycles/Anyway e200.png"></a>
+              <a href="../../views/bicycles/Dolomia.html" title="Dolomia"><img src="../../images/vehicles/bicycles/Dolomia.png"></a>
+              <a href="../../views/bicycles/Project level x rotor.html" title="Project level x rotor"><img
+                  src="../../images/vehicles/bicycles/Project level x rotor.png"></a>
             </div>
 
 
