--- a/views/motos/Ninja.html
+++ b/views/motos/Ninja.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../../css/style.css" />
 
   <meta charset="UTF-8">
-  <title>Iveco Trakker</title>
+  <title>Kawasaki Ninja</title>
 </head>
 <!--
 <body>
@@ -36,18 +36,16 @@
 
 <!-- Zone de réservation -->
 <section id="reservation" class="d-flex justify-content-evenly">
-  <img src="../../images/vehicles/cars/Senna.png" alt="SMclaren senna" id="photo-belle-voiture">
+  <img src="../../images/vehicles/motorbikes/Ninja.png" alt="Kawasaki Ninja" id="photo-belle-voiture">
 
   <article id="reservation-left" class="card">
     <form action="" id="description-vehicule">
       <br />
 
-      <h3 id="titre-vehicule" class="d-flex justify-content-center"><strong> Mclaren senna</strong></h3>
+      <h3 id="titre-vehicule" class="d-flex justify-content-center"><strong> Kawasaki Ninja</strong></h3>
       <div>
         <div class="d-flex justify-content-center">
-          Une voiture idéale pour vos trajets quotidiens
-          <br />
-          avec une faible consomation de carburant.
+          Une moto rapide qui va vite.
         </div>
         <br />
         <h4 id="ville">Caractéristiques du véhicule:</h4>
@@ -99,11 +97,11 @@
 
 
             <div class="slider-content">
-              <a href="../../views/cars/Impreza wrx sti.html" title="Subaru Impreza wrx sti"><img
-                  src="../../images/vehicles/cars/Impreza wrx sti.png"></a>
-              <a href="../../views/cars/500.html" title="Fiat 500"><img src="../../images/vehicles/cars/500.png"></a>
-              <a href="../../views/cars/classe c cabriolet.html" title="Mercedes classe c cabriolet"><img
-                  src="../../images/vehicles/cars/Classe c cabriolet.png"></a>
+              <a href="../../views/motos/gn.html" title="Kawasaki gn"><img
+                  src="../../images/vehicles/motorbikes/gn.png"></a>
+              <a href="../../views/motos/hayabusa.html" title="Kawasaki hayabusa"><img src="../../images/vehicles/motorbikes/hayabusa.png"></a>
+              <a href="../../views/motos/MT-10.html" title="Kawasaki MT-10"><img
+                  src="../../images/vehicles/motorbikes/MT-10.png"></a>
             </div>
 
 
