--- a/views/trucks/Eurocargo.html
+++ b/views/trucks/Eurocargo.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../../css/style.css" />
 
   <meta charset="UTF-8">
-  <title>Iveco Trakker</title>
+  <title>Iveco Eurocargo</title>
 </head>
 <!--
 <body>
@@ -36,18 +36,16 @@
 
 <!-- Zone de réservation -->
 <section id="reservation" class="d-flex justify-content-evenly">
-  <img src="../../images/vehicles/cars/Senna.png" alt="SMclaren senna" id="photo-belle-voiture">
+  <img src="../../images/vehicles/trucks/Eurocargo.png" alt="Iveco Eurocargo" id="photo-belle-voiture">
 
   <article id="reservation-left" class="card">
     <form action="" id="description-vehicule">
       <br />
 
-      <h3 id="titre-vehicule" class="d-flex justify-content-center"><strong> Mclaren senna</strong></h3>
+      <h3 id="titre-vehicule" class="d-flex justify-content-center"><strong> Iveco Eurocargo</strong></h3>
       <div>
         <div class="d-flex justify-content-center">
-          Une voiture idéale pour vos trajets quotidiens
-          <br />
-          avec une faible consomation de carburant.
+          Un camion qui n'est pas un camionette.
         </div>
         <br />
         <h4 id="ville">Caractéristiques du véhicule:</h4>
@@ -99,11 +97,11 @@
 
 
             <div class="slider-content">
-              <a href="../../views/cars/Impreza wrx sti.html" title="Subaru Impreza wrx sti"><img
-                  src="../../images/vehicles/cars/Impreza wrx sti.png"></a>
-              <a href="../../views/cars/500.html" title="Fiat 500"><img src="../../images/vehicles/cars/500.png"></a>
-              <a href="../../views/cars/classe c cabriolet.html" title="Mercedes classe c cabriolet"><img
-                  src="../../images/vehicles/cars/Classe c cabriolet.png"></a>
+              <a href="../../views/trucks/S-Way.html" title="Iveco S-Way"><img
+                  src="../../images/vehicles/trucks/S-Way.png"></a>
+              <a href="../../views/trucks/Stralis X-Way.html" title="Iveco Stralis X-Way"><img src="../../images/vehicles/trucks/Stralis X-Way.png"></a>
+              <a href="../../views/trucks/Trakker.html" title="Iveco Trakker"><img
+                  src="../../images/vehicles/trucks/Trakker.png"></a>
             </div>
 
 
