ajustements et correction des diverses pages vehicules.

--- a/views/bicycles/Dolomia.html
+++ b/views/bicycles/Dolomia.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../../css/style.css" />
 
   <meta charset="UTF-8">
-  <title>Iveco Trakker</title>
+  <title>Dolomia</title>
 </head>
 <!--
 <body>
