--- a/views/motos/Ninja.html
+++ b/views/motos/Ninja.html
@@ -99,8 +99,8 @@
             <div class="slider-content">
               <a href="../../views/motos/gn.html" title="Kawasaki gn"><img
                   src="../../images/vehicles/motorbikes/gn.png"></a>
-              <a href="../../views/motos/hayabusa.html" title="Kawasaki hayabusa"><img src="../../images/vehicles/motorbikes/hayabusa.png"></a>
-              <a href="../../views/motos/MT-10.html" title="Kawasaki MT-10"><img
+              <a href="../../views/motos/hayabusa.html" title="Suzuki hayabusa"><img src="../../images/vehicles/motorbikes/hayabusa.png"></a>
+              <a href="../../views/motos/MT-10.html" title="Yamaha MT-10"><img
                   src="../../images/vehicles/motorbikes/MT-10.png"></a>
             </div>
 
