--- a/views/motos/hayabusa.html
+++ b/views/motos/hayabusa.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../../css/style.css" />
 
   <meta charset="UTF-8">
-  <title>Kawasaki hayabusa</title>
+  <title>Suzuki hayabusa</title>
 </head>
 <!--
 <body>
@@ -99,7 +99,7 @@
             <div class="slider-content">
               <a href="../../views/motos/gn.html" title="Kawasaki gn"><img
                   src="../../images/vehicles/motorbikes/gn.png"></a>
-              <a href="../../views/motos/MT-10.html" title="Kawasaki MT-10"><img src="../../images/vehicles/motorbikes/MT-10.png"></a>
+              <a href="../../views/motos/MT-10.html" title="Yamaha MT-10"><img src="../../images/vehicles/motorbikes/MT-10.png"></a>
               <a href="../../views/motos/Ninja.html" title="Kawasaki Ninja"><img
                   src="../../images/vehicles/motorbikes/Ninja.png"></a>
             </div>
