--- a/views/bicycles/Project level x rotor.html
+++ b/views/bicycles/Project level x rotor.html
@@ -45,7 +45,7 @@
     <form action="" id="description-vehicule">
       <br />
 
-      <h3 id="titre-vehicule" class="d-flex justify-content-center"><strong> Mclaren senna</strong></h3>
+      <h3 id="titre-vehicule" class="d-flex justify-content-center"><strong> Project level x rotor</strong></h3>
       <div>
         <div class="d-flex justify-content-center">
           Une voiture idéale pour vos trajets quotidiens
