--- a/views/motos/hayabusa.html
+++ b/views/motos/hayabusa.html
@@ -42,7 +42,7 @@
     <form action="" id="description-vehicule">
       <br />
 
-      <h3 id="titre-vehicule" class="d-flex justify-content-center"><strong> Kawasaki hayabusa</strong></h3>
+      <h3 id="titre-vehicule" class="d-flex justify-content-center"><strong> Suzuki hayabusa</strong></h3>
       <div>
         <div class="d-flex justify-content-center">
           Une moto rapide qui va vite.
